--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "slimdom-sax-parser": "^1.1.3",
+    "xml-renderer": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
