--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   ],
   "devDependencies": {
     "@storybook/react": "^4.0.8",
-    "@storybook/addon-actions": "^4.0.8",
-    "@storybook/addon-links": "^4.0.8",
+    "@storybook/addon-options": "^4.0.8",
     "@storybook/addons": "^4.0.8",
     "@babel/core": "^7.1.6",
     "babel-loader": "^8.0.4"
