--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emotion": "^10.0.4",
     "fontoxpath": "^3.0.0-alpha.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
