--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"deploy": "npx gh-pages --dist build --repo git@github.com:wvbe/xml-renderer"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -32,5 +33,6 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	}
+	},
+	"homepage": "."
 }
